# elc_ocr_newrepo

./: .env_example  .gitignore  README.md  app.py  database.py  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements-all.txt  requirements-basic.txt  requirements.txt  vercel.json
app/: Dockerfile  main.py
app/api/v1/: app.py  dashboard.py
app/api/v1/endpoints/: token.py
app/core/: config.py  error_handlers.py  exceptions.py
app/db/: database.py
app/models/: database.py
app/schemas/: errors.py  token.py
app/services/: check_fun.py  dashboard_service.py  email_send.py  image_fun.py  model_fun.py  prompts.py  token_fun.py  token_service.py
app/static/: dashboard.html  index.html  test-email.html
app/static/css/: dashboard.css  datatable-bootstrap.css  datatable.css  style.css
app/static/js/: dashboard.js  script.js
app/utils/: ip-test.py  pressure-test.py
static/: index.html
static/js/: script.js
test/: azure-gpt.py  test-openai.html  test.html  test_ai_usage.py  test_model_switch.py
tests/: pressure-test.py
